// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstalledAppList should match a snappshot ListDesktopScreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="columns is-multiline"
        data-test=""
      >
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
              data-test-app-name="test"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="test"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        test
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
              data-test-app-name="asd"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="asd"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        asd
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="columns is-multiline"
      data-test=""
    >
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
            data-test-app-name="test"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="test"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      test
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
            data-test-app-name="asd"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="asd"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      asd
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstalledAppList should match a snappshot ListMobileScreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="w1nbtbsi-wrap-list"
      >
        <div
          class="bcn8i89-banner-wrap"
          data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
          data-test-app-name="test"
        >
          <div
            class="bv0d7a6-banner-inner"
          >
            In Development
          </div>
          <div
            class="card  is-clickable"
            data-test=""
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="celd5vt-card-image-wrap"
                >
                  <div
                    class="media-left"
                  >
                    <div
                      class="media-image"
                    >
                      <img
                        alt="test"
                        class="image"
                        src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="media-content"
                >
                  <h5
                    class="cx2tpjh-card-heading"
                  >
                    test
                  </h5>
                  <h6
                    class="text-ellipsis-5 c13mgq47-card-sub-heading"
                  >
                    Pete's Proptech World Ltd
                  </h6>
                  <h6
                    class="c70e4ht-card-sub-heading-additional"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bcn8i89-banner-wrap"
          data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
          data-test-app-name="asd"
        >
          <div
            class="bv0d7a6-banner-inner"
          >
            In Development
          </div>
          <div
            class="card  is-clickable"
            data-test=""
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="celd5vt-card-image-wrap"
                >
                  <div
                    class="media-left"
                  >
                    <div
                      class="media-image"
                    >
                      <img
                        alt="asd"
                        class="image"
                        src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="media-content"
                >
                  <h5
                    class="cx2tpjh-card-heading"
                  >
                    asd
                  </h5>
                  <h6
                    class="text-ellipsis-5 c13mgq47-card-sub-heading"
                  >
                    Pete's Proptech World Ltd
                  </h6>
                  <h6
                    class="c70e4ht-card-sub-heading-additional"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="w1nbtbsi-wrap-list"
    >
      <div
        class="bcn8i89-banner-wrap"
        data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
        data-test-app-name="test"
      >
        <div
          class="bv0d7a6-banner-inner"
        >
          In Development
        </div>
        <div
          class="card  is-clickable"
          data-test=""
        >
          <div
            class="card-content"
          >
            <div
              class="media"
            >
              <div
                class="celd5vt-card-image-wrap"
              >
                <div
                  class="media-left"
                >
                  <div
                    class="media-image"
                  >
                    <img
                      alt="test"
                      class="image"
                      src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="media-content"
              >
                <h5
                  class="cx2tpjh-card-heading"
                >
                  test
                </h5>
                <h6
                  class="text-ellipsis-5 c13mgq47-card-sub-heading"
                >
                  Pete's Proptech World Ltd
                </h6>
                <h6
                  class="c70e4ht-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bcn8i89-banner-wrap"
        data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
        data-test-app-name="asd"
      >
        <div
          class="bv0d7a6-banner-inner"
        >
          In Development
        </div>
        <div
          class="card  is-clickable"
          data-test=""
        >
          <div
            class="card-content"
          >
            <div
              class="media"
            >
              <div
                class="celd5vt-card-image-wrap"
              >
                <div
                  class="media-left"
                >
                  <div
                    class="media-image"
                  >
                    <img
                      alt="asd"
                      class="image"
                      src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                    />
                  </div>
                </div>
              </div>
              <div
                class="media-content"
              >
                <h5
                  class="cx2tpjh-card-heading"
                >
                  asd
                </h5>
                <h6
                  class="text-ellipsis-5 c13mgq47-card-sub-heading"
                >
                  Pete's Proptech World Ltd
                </h6>
                <h6
                  class="c70e4ht-card-sub-heading-additional"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstalledAppList should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="columns is-multiline"
        data-test=""
      >
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
              data-test-app-name="test"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="test"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        test
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
              data-test-app-name="asd"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="asd"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        asd
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <section
        class="section is-flex is-centered has-padding has-margin has-background"
        data-test=""
      >
        <nav
          aria-label="pagination"
          class="pagination is-centered"
          role="navigation"
        >
          <a
            class="pagination-previous "
          >
            Previous
          </a>
          <a
            class="pagination-next  "
          >
            Next page
          </a>
          <ul
            class="pagination-list"
          >
            <li>
              <a
                aria-label="Goto page 1"
                class="pagination-link"
              >
                1
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 2"
                class="pagination-link is-current"
              >
                2
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 3"
                class="pagination-link"
              >
                3
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 4"
                class="pagination-link"
              >
                4
              </a>
            </li>
            <li>
              <span
                class="pagination-ellipsis has-text-grey"
              >
                …
              </span>
            </li>
            <li>
              <a
                aria-label="Goto page 10"
                class="pagination-link"
              >
                10
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="columns is-multiline"
      data-test=""
    >
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
            data-test-app-name="test"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="test"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      test
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
            data-test-app-name="asd"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="asd"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      asd
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="section is-flex is-centered has-padding has-margin has-background"
      data-test=""
    >
      <nav
        aria-label="pagination"
        class="pagination is-centered"
        role="navigation"
      >
        <a
          class="pagination-previous "
        >
          Previous
        </a>
        <a
          class="pagination-next  "
        >
          Next page
        </a>
        <ul
          class="pagination-list"
        >
          <li>
            <a
              aria-label="Goto page 1"
              class="pagination-link"
            >
              1
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 2"
              class="pagination-link is-current"
            >
              2
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 3"
              class="pagination-link"
            >
              3
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 4"
              class="pagination-link"
            >
              4
            </a>
          </li>
          <li>
            <span
              class="pagination-ellipsis has-text-grey"
            >
              …
            </span>
          </li>
          <li>
            <a
              aria-label="Goto page 10"
              class="pagination-link"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstalledAppList should match a snapshot when use empty infoType 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="columns is-multiline"
        data-test=""
      >
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
              data-test-app-name="test"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="test"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        test
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
              data-test-app-name="asd"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="asd"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        asd
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <section
        class="section is-flex is-centered has-padding has-margin has-background"
        data-test=""
      >
        <nav
          aria-label="pagination"
          class="pagination is-centered"
          role="navigation"
        >
          <a
            class="pagination-previous "
          >
            Previous
          </a>
          <a
            class="pagination-next  "
          >
            Next page
          </a>
          <ul
            class="pagination-list"
          >
            <li>
              <a
                aria-label="Goto page 1"
                class="pagination-link"
              >
                1
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 2"
                class="pagination-link is-current"
              >
                2
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 3"
                class="pagination-link"
              >
                3
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 4"
                class="pagination-link"
              >
                4
              </a>
            </li>
            <li>
              <span
                class="pagination-ellipsis has-text-grey"
              >
                …
              </span>
            </li>
            <li>
              <a
                aria-label="Goto page 10"
                class="pagination-link"
              >
                10
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="columns is-multiline"
      data-test=""
    >
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
            data-test-app-name="test"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="test"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      test
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
            data-test-app-name="asd"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="asd"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      asd
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      class="section is-flex is-centered has-padding has-margin has-background"
      data-test=""
    >
      <nav
        aria-label="pagination"
        class="pagination is-centered"
        role="navigation"
      >
        <a
          class="pagination-previous "
        >
          Previous
        </a>
        <a
          class="pagination-next  "
        >
          Next page
        </a>
        <ul
          class="pagination-list"
        >
          <li>
            <a
              aria-label="Goto page 1"
              class="pagination-link"
            >
              1
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 2"
              class="pagination-link is-current"
            >
              2
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 3"
              class="pagination-link"
            >
              3
            </a>
          </li>
          <li>
            <a
              aria-label="Goto page 4"
              class="pagination-link"
            >
              4
            </a>
          </li>
          <li>
            <span
              class="pagination-ellipsis has-text-grey"
            >
              …
            </span>
          </li>
          <li>
            <a
              aria-label="Goto page 10"
              class="pagination-link"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InstalledAppList should show loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="columns is-multiline cqlauwf-content-is-loading"
        data-test=""
      >
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
              data-test-app-name="test"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="test"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        test
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
          data-test=""
        >
          <div
            class="fvmt8oy-fade-in"
          >
            <div
              class="bcn8i89-banner-wrap"
              data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
              data-test-app-name="asd"
            >
              <div
                class="bv0d7a6-banner-inner"
              >
                In Development
              </div>
              <div
                class="card  is-clickable"
                data-test=""
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="celd5vt-card-image-wrap"
                    >
                      <div
                        class="media-left"
                      >
                        <div
                          class="media-image"
                        >
                          <img
                            alt="asd"
                            class="image"
                            src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="media-content"
                    >
                      <h5
                        class="cx2tpjh-card-heading"
                      >
                        asd
                      </h5>
                      <h6
                        class="text-ellipsis-5 c13mgq47-card-sub-heading"
                      >
                        Pete's Proptech World Ltd
                      </h6>
                      <h6
                        class="c70e4ht-card-sub-heading-additional"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="columns is-multiline cqlauwf-content-is-loading"
      data-test=""
    >
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="09043eb8-9e5e-4650-b7f1-f0cb62699027"
            data-test-app-name="test"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="test"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/d10e790c-2bf2-40ae-9c43-82c1534bde31.png"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      test
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="column is-multiline is-full-mobile is-half-tablet is-one-third-widescreen is-one-quarter-fullhd"
        data-test=""
      >
        <div
          class="fvmt8oy-fade-in"
        >
          <div
            class="bcn8i89-banner-wrap"
            data-test-app-id="261da083-cee2-4f5c-a18f-8f9375f1f5af"
            data-test-app-name="asd"
          >
            <div
              class="bv0d7a6-banner-inner"
            >
              In Development
            </div>
            <div
              class="card  is-clickable"
              data-test=""
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="celd5vt-card-image-wrap"
                  >
                    <div
                      class="media-left"
                    >
                      <div
                        class="media-image"
                      >
                        <img
                          alt="asd"
                          class="image"
                          src="https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/1d38c5ec-e3c0-4138-9fe0-e77bce4034d1.octet-stream"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="media-content"
                  >
                    <h5
                      class="cx2tpjh-card-heading"
                    >
                      asd
                    </h5>
                    <h6
                      class="text-ellipsis-5 c13mgq47-card-sub-heading"
                    >
                      Pete's Proptech World Ltd
                    </h6>
                    <h6
                      class="c70e4ht-card-sub-heading-additional"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
